Fix spacing issue in TOC

--- a/assets/sass/toc.sass
+++ b/assets/sass/toc.sass
@@ -11,6 +11,9 @@ $top-margin: $navbar-height + $toc-scroll-margin
       line-height: 120%
       padding-left: 0.8rem
 
+      .toc-list
+        margin-top: 0.5rem
+
       & + .toc-page-item
         margin-top: 0.5rem
 
